<resources>
    <string name="app_name">FastDrawing</string>
    <string name="clear">Clear</string>
    <string name="accept">Accept</string>
    <string name="share">Share</string>
    <string name="image_bg">ImageBackground</string>
    <string name="background">Background</string>
    <string name="eraser">Eraser</string>
    <string name="pencil">pencil</string>
    <string name="pen">pen</string>
    <string name="marker">marker</string>
    <string name="black">black</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="hide_toolbar">Hide Toolbar</string>
    <string name="add_photo_from_gallery">Add photo from gallery</string>
    <string name="open_toolbar">Open toolbar</string>
    <string name="instruction">Instruction</string>
    <string name="fast_drawing">FastDrawing</string>
    <string-array name="background_name">
        <item>Farm Land</item>
        <item>Scroll</item>
        <item>Desert</item>
        <item> Magic Blue</item>
        <item>Old City</item>
        <item>Clip Board</item>
        <item>Grass</item>
        <item>Green Leaves</item>
        <item>Moon Landscape</item>
        <item>Prismatic Flourish</item>
        <item>Technologic</item>
        <item>White</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
    </string-array>
    <integer-array name="drawable_positions">
        <item>@drawable/farm_small</item>
        <item>@drawable/scroll_small</item>
        <item>@drawable/desert_small</item>
        <item>@drawable/bg_blue_small</item>
        <item>@drawable/city_small</item>
        <item>@drawable/clip_small</item>
        <item>@drawable/grass_small</item>
        <item>@drawable/green_leaves_small</item>
        <item>@drawable/moon_landscape_small</item>
        <item>@drawable/prismatic_floruish_small</item>
        <item>@drawable/technologic_small</item>
        <item>@drawable/white_small</item>
        <item>@drawable/red_small</item>
        <item>@drawable/bllue_small</item>
        <item>@drawable/yellow_small</item>
    </integer-array>

    <string name="splash_1_quote">\"I was looking for such a simple application and finally found it. It helps me every day.\"</string>
    <string name="splash_1_author">-ANDREW</string>
    <string name="splash_2_quote">\"Great app for quick notes presented in a visually interesting way.\"</string>
    <string name="splash_2_author">-KATE</string>
    <string name="splash_3_quote">\"Brilliant app highly recommended.\"</string>
    <string name="splash_3_author">-PAUL</string>
    <string name="splash_4_quote">\"Easy to use, what more could you want?\"</string>
    <string name="splash_4_author">-MIKE</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sos_information">Welcome in SOS moduel, once when u get trap and needed help, just click the button for start make signal SOS</string>
    <string name="button">Button</string>
    <string name="exit">Exit</string>
    <string name="start">START</string>
    <string name="text_button">text button</string>
</resources>
