<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.company.andrzej.fastdraw.DrawingView
        android:id="@+id/drawing_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:id="@+id/btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@mipmap/ic_done_black_36dp"
        android:contentDescription="@string/accept"
        android:layout_alignParentRight="true" />

    <ImageButton
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@mipmap/ic_clear_black_36dp"
        android:contentDescription="@string/clear"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:id="@+id/btn_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@mipmap/ic_screen_share_black_36dp"
        android:contentDescription="@string/background"
        android:layout_alignParentRight="true" />

    <ImageButton
        android:id="@+id/btn_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/ic_keyboard_arrow_up_black_36dp"
        android:contentDescription="@string/open_toolbar" />

    <ImageButton
        android:id="@+id/btn_addphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_background"
        android:layout_alignEnd="@+id/btn_clear"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_add_a_photo_black_24dp"
        android:contentDescription="@string/add_photo_from_gallery"
        android:layout_alignRight="@+id/btn_clear"
        android:layout_alignParentLeft="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/pointer"
        android:id="@+id/pointer"
        android:visibility="invisible"/>
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/water_mark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
        
</RelativeLayout>